changed skybox and fog

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@ crashlytics-build.properties
 Nightmare_Descent_Into_Darkness/Library/
 Nightmare_Descent_Into_Darkness/ProjectSettings/
 Nightmare_Descent_Into_Darkness/webgl/
+Nightmare_Descent_Into_Darkness/Assets/Starfield Skybox/Demo/
+Nightmare_Descent_Into_Darkness/Assets/Starfield Skybox/Demo.meta
