--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,5 @@ Nightmare_Descent_Into_Darkness/ProjectSettings/
 Nightmare_Descent_Into_Darkness/webgl/
 Nightmare_Descent_Into_Darkness/Assets/Starfield Skybox/Demo/
 Nightmare_Descent_Into_Darkness/Assets/Starfield Skybox/Demo.meta
+Nightmare_Descent_Into_Darkness/webgl2/
+Nightmare_Descent_Into_Darkness/webgl2.zip
