--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,9 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Nightmare_Descent_Into_Darkness/Library/
 Nightmare_Descent_Into_Darkness/ProjectSettings/
-Nightmare_Descent_Into_Darkness/webgl/
 Nightmare_Descent_Into_Darkness/Assets/Starfield Skybox/Demo/
 Nightmare_Descent_Into_Darkness/Assets/Starfield Skybox/Demo.meta
+
+webgl2.zip
+webgl/
+webgl2/
