--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,6 @@ Nightmare_Descent_Into_Darkness/Assets/Starfield Skybox/Demo/
 Nightmare_Descent_Into_Darkness/Assets/Starfield Skybox/Demo.meta
 Nightmare_Descent_Into_Darkness/webgl2/
 Nightmare_Descent_Into_Darkness/webgl2.zip
+webgl/
+webgl2/
+webgl2.zip
